[BE] #28 PR(#32) 피드백 반영
- server_info 테이블 스키마 내 user_id not null 옵션 추가
- Stream API를 통한 불변 List 변환 메소드 개선
- 테스트용 Entity 생성 간 ID 미삽입 문제 수정